# emodul

./: .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  SKILL_MCP.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: _config.yml  index.md
emodul/: __init__.py  __main__.py  _client_paths.py  _config_writer.py  _resolver.py  _schedule_format.py  _zone_resolver.py  api.py  auth.py  cli.py  config.py  format.py  i18n.py  settings_map.py  storage.py  web_auth.py
emodul/commands/: alarms.py  auth.py  install.py  mcp.py  menu.py  misc.py  modules.py  schedules.py  settings.py  skill.py  stats.py  watch.py  zones.py
emodul/mcp/: __init__.py  _helpers.py  server.py
