[project]
name = "emodul"
version = "0.1.0"
description = "Unofficial CLI for the Tech Sterowniki eModul.pl cloud API"
authors = [{ name = "Szymon Paluch" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "keyring>=24",
]

[project.scripts]
emodul = "emodul.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emodul"]
