[project]
name = "emodul"
version = "0.1.5"
description = "Unofficial Python CLI + MCP server for Tech Sterowniki / eModul.pl floor-heating controllers. AI-agent ready."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Szymon Paluch" }]
requires-python = ">=3.10"
keywords = [
    "tech-sterowniki", "emodul", "emodul-pl", "heating", "floor-heating",
    "underfloor-heating", "thermostat", "smart-home", "home-automation",
    "iot", "cli", "claude", "claude-skills", "ai-agents", "home-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "keyring>=24",
    "mcp[cli]>=1.20",
    "anyio>=4",
]

[project.urls]
Homepage = "https://github.com/hculap/emodul"
Repository = "https://github.com/hculap/emodul"
Issues = "https://github.com/hculap/emodul/issues"
Discussions = "https://github.com/hculap/emodul/discussions"

[project.scripts]
emodul = "emodul.cli:cli"
emodul-mcp = "emodul.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emodul"]

# Ship SKILL.md alongside the package so `emodul skill install` can find it
# after `pip install emodul`. Source remains at repo root for GitHub UI.
[tool.hatch.build.targets.wheel.force-include]
"SKILL.md" = "emodul/SKILL.md"
"SKILL_MCP.md" = "emodul/SKILL_MCP.md"
